# sharesphere

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
config/: config.yaml
scripts/: create_superuser.py  init_db.py
sharesphere/: admin.py  app.py  auth.py  cli.py  config.py  config.yaml  database.py  default_config.yaml  file_manager.py  models.py
sharesphere/config/: config.yaml
