[tool.poetry]
name = "sharesphere"
version = "1.0.2"
description = "A multi-user file sharing system built with Streamlit, SQLAlchemy, and SQLite."
authors = ["Rakesh <rakeshpandey820@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
streamlit = ">=1.41.1,<2.0.0"
SQLAlchemy = ">=2.0.37,<3.0.0"
omegaconf = ">=2.3.0,<3.0.0"
click = ">=8.1.8,<9.0.0"
bcrypt = "^4.2.1"

[tool.poetry.scripts]
sharesphere = "sharesphere.cli:main"

[poetry.group.dev.dependencies]
pytest = ">=7.2.0,<8.0.0"
pytest-cov = ">=4.0.0,<5.0.0"
coverage = ">=6.5.0,<7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Include data files
include = [
    "sharesphere/config.yaml",
    "sharesphere/templates/*",
    "LICENSE",
    "README.md"
]
